[gd_scene load_steps=8 format=3 uid="uid://kblyn52iu620"]

[ext_resource type="Script" uid="uid://dvaoa2ocbfct1" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://dk6t1qg6xs3r3" path="res://mob.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://bbhcbujvtgbwq" path="res://satellite.tscn" id="3_7mycd"]
[ext_resource type="PackedScene" uid="uid://0uwsy8lfsg0" path="res://player.tscn" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://cdr8s3ha3rhi6" path="res://hud.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://deafqqs3j03b5" path="res://bouncingmeteor.tscn" id="4_7mycd"]

[sub_resource type="Curve2D" id="Curve2D_7mycd"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_h2yge")
mob_scene = ExtResource("2_1bvp3")
satellite_scene = ExtResource("3_7mycd")
bouncing = ExtResource("4_7mycd")

[node name="Player" parent="." instance=ExtResource("3_lquwl")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="MeteorTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_7mycd")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
[connection signal="timeout" from="MeteorTimer" to="." method="_on_meteor_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
